syntax = "proto3";
option go_package = "pkg/grpc/quickpizza";
package quickpizza;

service GRPC {
    rpc Status(StatusRequest) returns (StatusResponse) {}
    rpc EvaluatePizza(PizzaEvaluationRequest) returns (PizzaEvaluationResponse) {}
}

message StatusRequest {

}

message StatusResponse {
    bool ready = 1;
}

message PizzaEvaluationRequest {

}

message PizzaEvaluationResponse {

}
